@@ -1,3 +1,10 @@
+2008-08-25  Todd M. Helfter <tmh@users.sourceforge.net>
+
+	The patch is associated with the bug tracker id: 1936220
+	library/tkfbox.tcl : fix the multiple selection error for
+	tk_getOpenFile -multiple 1 which fails on all unix platforms since
+	the adoption of ttk widgets.
+
 2008-08-19  Joe English  <jenglish@users.sourceforge.net>
 
 	* generic/ttk/ttkScroll.c:  Don't use sprintf "%g" to
